# shows-gate-backend

./: .env.example  .gitignore  LICENSE  compose-db.yml  compose.yml  flake.nix  shows-gate-backend.cabal
app/: DatabaseModels.hs  Main.hs
app/ShowsGate/: Contracts.hs  DB.hs  WebAPI.hs
app/ShowsGate/Contracts/: Movies.hs  ValidationErrorResp.hs
app/ShowsGate/DB/: Models.hs
app/ShowsGate/Domain/: Movie.hs  Title.hs
app/ShowsGate/Domain/Movie/: Primitives.hs
app/ShowsGate/Domain/Title/: Primitives.hs
app/ShowsGate/WebAPI/: Movies.hs  Requests.http
app/ShowsGate/WebAPI/Common/: MonadUUID.hs
app/ShowsGate/WebAPI/Movies/: Add.hs  Get.hs
