cabal-version:      3.4
name:               shows-gate-backend
version:            0.1.0.0
homepage:           https://github.com/danielambda/shows-gate-backend
license:            MIT
license-file:       LICENSE
author:             danielambda
maintainer:         daniel.gevorgyan25@gmail.com
category:           Web
build-type:         Simple

common warnings
    ghc-options: -Wall

executable shows-gate-backend
    import:           warnings
    main-is:          Main.hs
    other-modules:
        DatabaseModels
      , ShowsGate.WebAPI
      , ShowsGate.WebAPI.Movies
    build-depends:
        base
      , aeson
      , beam-core
      , beam-migrate
      , beam-postgres
      , bytestring
      , monad-time
      , mtl
      , postgresql-simple
      , resource-pool
      , servant-server
      , text
      , time
      , uuid
      , validation
      , wai
      , warp
    hs-source-dirs:   app
    default-language: GHC2021
